# electronero

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SOLIDITY.md  bitcointalk-ann.md  configure.ac  configure~  generate_chainTxData.sh  interchained-launch-checklist.md  interchained-whitepaper.md  interchainedd-beta.md  interchainedd-launch.md  interchainedd-todo.md  ubuntu_install.sh
bounty/: .telegram_offset  crud.py  telegram.py  translations.py
bounty/app/: README.md  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py  translations.py  utils.py
contracts/: README.md  TokenMarketplace.sol
contrib/bridge/: bridge_watcher.py  return_watcher.py
contrib/evm/: abi_encode.py
contrib/init/: org.bitcoin.bitcoind.plist
contrib/macdeploy/: fancy.plist
doc/man/: bitcoind.1  interchained-qt.1  interchainedd.1
docs/: daemon_rpc.md  rpc.html  rpc.md  token-operations.md  wallet_rpc.md  yespower30s.md
examples/staking/: CMakeLists.txt  README.md  staking_example.cpp
explorer/token/: README.md  app.py
mobile/app/: App.js  (+2 more)
modules/: python.md
src/: CMakeLists.txt  Makefile.am  blockencodings.cpp  blockencodings.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  cryptonote_config.h  evm.cpp  evm.h  fs.cpp  init.cpp  logging.h  miner.cpp  miner.h  net.cpp  net_processing.cpp  pow.cpp  pow.h  pow_kawpow.cpp  pow_kawpow.h  protocol.cpp  protocol.h  txdb.cpp  validation.cpp  validation.h  versionbitsinfo.cpp
src/evm/: CMakeLists.txt  evm.cpp  evm.h
token-explorer/: app.py
utils/: wallet_messenger.py
website/: index.html
(+136 files in other folders)
